Update videos and remove autoplay flag to try to get views updating

--- a/src/content/docs/book/appendix/0-installation/2-1-setup-macos.mdx
+++ b/src/content/docs/book/appendix/0-installation/2-1-setup-macos.mdx
@@ -29,7 +29,7 @@ To get SplashKit and other coding tools installed on macOS, follow the steps out
 
 :::note[XCode Command Line Tools Installation Video:]
 <div class="not-content">
-  <YouTube id="3CHGbyVY2F8" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="3CHGbyVY2F8" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 :::
 
@@ -68,7 +68,7 @@ For coding in C#, you will need to install the `.NET` SDK which will allow you t
 
 :::note[.NET Installation Video:]
 <div class="not-content">
-  <YouTube id="i2g9br8Y9Jc" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="i2g9br8Y9Jc" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 :::
 
@@ -90,7 +90,7 @@ If you installed Xcode Command Line Tools successfully in Step 1, then you will 
 
 :::note[SplashKit Installation Video:]
 <div class="not-content">
-  <YouTube id="KlT_PCoc0pw" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="KlT_PCoc0pw" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 :::
 
@@ -141,7 +141,7 @@ Visual Studio Code, also commonly known as *VS Code* or just *Code*, is a powerf
 
 :::note[VS Code Installation Video:]
 <div class="not-content">
-  <YouTube id="ABJJMuzzbgA" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="ABJJMuzzbgA" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 :::
 
