--- a/src/content/docs/book/appendix/0-installation/2-2-pi-computer.mdx
+++ b/src/content/docs/book/appendix/0-installation/2-2-pi-computer.mdx
@@ -201,7 +201,7 @@ export const Swiper8 = [
 ];
 
 <div class="not-content">
-  <YouTube id="iQEsXnfwpqA" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="iQEsXnfwpqA" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
 Building programs really requires that you have access to a computer that you can play around with. To maximise your experience, we have designed things to work with a [Raspberry Pi](https://www.raspberrypi.com) single board computer.
