--- a/src/content/docs/book/appendix/0-installation/2-5-setup-win-msys.mdx
+++ b/src/content/docs/book/appendix/0-installation/2-5-setup-win-msys.mdx
@@ -27,7 +27,7 @@ To get SplashKit and other coding tools installed on Windows, using MSYS2, follo
 
 :::note[MSYS2 Installation Video:]
 <div class="not-content">
-  <YouTube id="Hayjgo1Kqg0" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="Hayjgo1Kqg0" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 :::
 
@@ -110,7 +110,7 @@ To install SplashKit, you will firstly need to install the `git`, `clang`, `gcc`
 
 :::note[Command Line Tools Installation Video:]
 <div class="not-content">
-  <YouTube id="XxaHFoGdlj0" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="XxaHFoGdlj0" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
 *The command used in the video above has been altered slightly, but the process is the same.*
@@ -144,7 +144,7 @@ SplashKit is a beginner's all-purpose software toolkit that will allow you to cr
 
 :::note[SplashKit Installation Video:]
 <div class="not-content">
-  <YouTube id="ndP8vrf9oOU" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="ndP8vrf9oOU" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 :::
 
@@ -188,7 +188,7 @@ Visual Studio Code, also commonly known as *VS Code* or just *Code*, is a powerf
 
 :::note[VS Code Installation Video:]
 <div class="not-content">
-  <YouTube id="UqGIPYWprRE" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="UqGIPYWprRE" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 :::
 
@@ -297,7 +297,7 @@ For coding in C#, you will need to install the `.NET` SDK which will allow you t
 
 :::note[.NET Installation Video:]
 <div class="not-content">
-  <YouTube id="lmJjNbPwAlw" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="lmJjNbPwAlw" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 :::
 
@@ -354,6 +354,6 @@ Here is a video showing how you can click and drag folders into your MSYS2/MINGW
 Note that you need to type `cd` then add a *space* before you drag the folder.
 
 <div class="not-content">
-  <YouTube id="s2YTKsRjkWI" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="s2YTKsRjkWI" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 :::
