--- a/src/content/docs/book/part-0-getting-started/00-0-introduction.mdx
+++ b/src/content/docs/book/part-0-getting-started/00-0-introduction.mdx
@@ -6,7 +6,7 @@ sidebar:
 import { YouTube } from 'astro-embed';
 
 <div class="not-content">
-  <YouTube id="MFuJC_VQQ6k" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="P1gjMRUbaEI" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
 ## Welcome to the Programmer's Field Guide
