--- a/src/content/docs/book/part-0-getting-started/2-computer-use/0-overview.mdx
+++ b/src/content/docs/book/part-0-getting-started/2-computer-use/0-overview.mdx
@@ -4,7 +4,7 @@ title: Computer Use Overview
 import { YouTube } from 'astro-embed';
 
 <div class="not-content">
-  <YouTube id="2kadJerVoWM" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="Rgkr0_SI4Ts" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
 The first leg of our journey will introduce you to a new way of interacting with your computer. This will give you a whole range of new tools to play with, helping add new capabilities to your toolbelt and positioning you to be a powerful and productive computer user.
