--- a/src/content/docs/book/part-0-getting-started/3-building-programs/0-overview.mdx
+++ b/src/content/docs/book/part-0-getting-started/3-building-programs/0-overview.mdx
@@ -4,7 +4,7 @@ title: Building Programs Overview
 import { YouTube } from 'astro-embed';
 
 <div class="not-content">
-  <YouTube id="HpnWZtD25Eo" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="kEcy5IjGx6k" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
 The first two legs of our journey have taken us to two quite different sites: digital realities, and using the terminal and shell.
