--- a/src/content/docs/book/part-0-getting-started/3-building-programs/2-trailside/04-1-hello-debugger.mdx
+++ b/src/content/docs/book/part-0-getting-started/3-building-programs/2-trailside/04-1-hello-debugger.mdx
@@ -160,7 +160,7 @@ Prefer to follow a video? We've got you covered!
 ### Setting up your C# project and 'Run and Debug' configuration
 
 <div class="not-content">
-  <YouTube id="xo14LPTapKU" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="xo14LPTapKU" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
 In this video we demonstrate how to:
@@ -171,7 +171,7 @@ In this video we demonstrate how to:
 ### Debugging with breakpoints Video
 
 <div class="not-content">
-  <YouTube id="M_b601gHu2g" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="M_b601gHu2g" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
 In this video we demonstrate how to use breakpointing and **step-over**/**continue** in the debugger, giving us the ability to follow the flow of execution, line by line.
