--- a/src/content/docs/book/part-1-instructions/00-part-1-programs-as-instructions.mdx
+++ b/src/content/docs/book/part-1-instructions/00-part-1-programs-as-instructions.mdx
@@ -4,7 +4,7 @@ title: Overview of Programs as Instructions
 import { YouTube } from 'astro-embed';
 
 <div class="not-content">
-  <YouTube id="fQbKZoxILoo" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="09haoqmARt4" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
 Part 0 has helped us set the stage for the first leg of our journey, in which we will explore **programs as instructions**.
