--- a/src/content/docs/book/part-1-instructions/3-control-flow/0-panorama/7-hand-execution.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/0-panorama/7-hand-execution.mdx
@@ -6,7 +6,7 @@ import { YouTube } from 'astro-embed';
 Hand execution is the process of manually following the instructions in code as the computer does. For this you need some code you are wanting to explore, and a piece of paper. Watch the following video to see how to perform this process.
 
 <div class="not-content">
-  <YouTube id="QS7vxAsCLEI" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="xtxxKzOQFrs" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
 :::note[Hand execution...]
