--- a/src/content/docs/book/part-1-instructions/3-control-flow/0-panorama/8-terminal-methods.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/0-panorama/8-terminal-methods.mdx
@@ -8,7 +8,7 @@ In Sequence and Data, we were able to use a number of methods from the .NET Syst
 ## Terminal Methods
 
 <div class="not-content">
-  <YouTube id="ozp3oUHEidg" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="Q-_b0EfmGsQ" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
 In addition to `WriteLine`, `Write`, `ReadLine`, and the convert methods we will now need ways to check if data provided has the right format. The .NET library doesn't have an easy way to do this, but we can make use of the following SplashKit methods for now:
