--- a/src/content/docs/book/part-1-instructions/3-control-flow/0-panorama/9-multimedia-methods.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/0-panorama/9-multimedia-methods.mdx
@@ -4,7 +4,7 @@ title: Multimedia methods to use
 import { YouTube } from 'astro-embed';
 
 <div class="not-content">
-  <YouTube id="Vye2OGN2iI0" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="SATaF92eeuI" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
 With the more interactive programs using SplashKit there are now a whole range of methods that we can use to check for user inputs, and to help test different aspect of our game (such as time passing, and detecting collisions).
