--- a/src/content/docs/book/part-1-instructions/3-control-flow/2-trailside/04-0-looping.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/2-trailside/04-0-looping.mdx
@@ -4,7 +4,7 @@ title: "Looping"
 import { YouTube } from 'astro-embed';
 
 <div class="not-content">
-  <YouTube id="UizWEQxUScE" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="GlnX27vD5pw" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
 There are two main ways of controlling the sequence of actions in a program: **branching**, which we have just explored, and **looping** or **repetition**. A language's looping statements allow you to jump back and repeat instructions that have already been performed. Different statements let you loop 0 to many or 1 to many times.
