--- a/src/content/docs/book/part-1-instructions/3-control-flow/2-trailside/05-1-break.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/2-trailside/05-1-break.mdx
@@ -299,7 +299,7 @@ The following images show how this works.
 This example was inspired by the classic Monty Python sketch below. This comedy group was the inspiration behind the name for the Python programming language.
 
 <div class="not-content">
-  <YouTube id="zIV4poUZAQo" params="fs=1&start=104&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="zIV4poUZAQo" params="fs=1&start=104&modestbranding=1&rel=0"/>
 </div>
 
 :::note[Summary]
