--- a/src/content/docs/book/part-2-organised-code/00-part-2-programs-as-organised-code.mdx
+++ b/src/content/docs/book/part-2-organised-code/00-part-2-programs-as-organised-code.mdx
@@ -6,7 +6,7 @@ import { YouTube } from 'astro-embed';
 Welcome to the Part 2 of this journey.
 
 <div class="not-content">
-  <YouTube id="7WlGXFNK7fE" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="Af_XUL2kMLY" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
 In Part 1 you have explored programs as instructions, and the structured programming principles of **sequence**, **selection**, and **repetition**.
