--- a/src/content/docs/book/part-2-organised-code/1-starting-cpp/0-overview.mdx
+++ b/src/content/docs/book/part-2-organised-code/1-starting-cpp/0-overview.mdx
@@ -4,7 +4,7 @@ title: Overview
 import { YouTube } from 'astro-embed';
 
 <div class="not-content">
-  <YouTube id="KwySdzaOLyU" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="mH8MHZoLbZQ" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
 In order to explore the ways we organise code, we are going to be switching programming languages to C/C++. So, before we can add new concepts and ideas let's have a look at how to build C/C++ programs and how to code sequence and data, and control flow in this language.
