--- a/src/content/docs/book/part-2-organised-code/1-starting-cpp/2-trailside/1-0-building-cpp.mdx
+++ b/src/content/docs/book/part-2-organised-code/1-starting-cpp/2-trailside/1-0-building-cpp.mdx
@@ -119,5 +119,5 @@ Remember: **save**, **compile**, and then **run**.
 ## Video Walkthrough
 In this video we'll step through how to compile a C++ program manually.
 <div class="not-content">
-  <YouTube id="uWj4MmbnlJQ" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="uWj4MmbnlJQ" params="fs=1&modestbranding=1&rel=0"/>
 </div>
