--- a/src/content/docs/book/part-2-organised-code/1-starting-cpp/2-trailside/1-1-vscode-cpp.mdx
+++ b/src/content/docs/book/part-2-organised-code/1-starting-cpp/2-trailside/1-1-vscode-cpp.mdx
@@ -363,5 +363,5 @@ Remember, if you change the "-o" setting in *tasks.json*, you will also need to 
 
 In this video we'll step through how to set up compiling and debugging C++ in VS Code.
 <div class="not-content">
-  <YouTube id="pmoLv8sfplU" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="pmoLv8sfplU" params="fs=1&modestbranding=1&rel=0"/>
 </div>
