--- a/src/content/docs/book/part-2-organised-code/2-organising-code/2-trailside/04-function-decl.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-organising-code/2-trailside/04-function-decl.mdx
@@ -96,5 +96,5 @@ We will explore how to do that next.
 ## Debugging
 Now that we can declare functions and procedures, we also need to make sure we can debug them! This video will cover how to follow the flow of code by _stepping in_ and _out_ of functions, along with some common issues that might show up while stepping in C++.
 <div class="not-content">
-  <YouTube id="Vv9lYSbyKdw" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="Vv9lYSbyKdw" params="fs=1&modestbranding=1&rel=0"/>
 </div>
