--- a/src/content/docs/book/part-2-organised-code/4-indirect-access/0-overview.mdx
+++ b/src/content/docs/book/part-2-organised-code/4-indirect-access/0-overview.mdx
@@ -4,7 +4,7 @@ title: Overview
 import { YouTube } from 'astro-embed';
 
 <div class="not-content">
-  <YouTube id="hOtfYT-IWDI" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="RNl3B0qjshU" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
 So far we have seen how to work with data, structure logic using sequence and control flow statements, organise our code in functions and procedures, and structure data with structs and enums. Though this material we have seen how important it is to be able to break down our code into manageable chunks.
