--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/0-panorama/0-array.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/0-panorama/0-array.mdx
@@ -81,5 +81,5 @@ int main()
 
 In this video we'll take a look at the concept of arrays visually, and then walk through some simple code that uses them!
 <div class="not-content">
-  <YouTube id="dAHY-LyTRW0" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="dAHY-LyTRW0" params="fs=1&modestbranding=1&rel=0"/>
 </div>
