--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-tour/00-03-calculating-index.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-tour/00-03-calculating-index.mdx
@@ -11,7 +11,7 @@ Accessing the values in an array directly still requires you to access and proce
 Watch the following video to see how to use expressions to calculate the index used to access each element of the array. See how you can use a loop to reduce the code needed to process your array, taking the same amount of code regardless of the number of elements in it.
 
 <div class="not-content">
-  <YouTube id="xV1Ny2q1eOQ" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="xV1Ny2q1eOQ" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
 Have a go at converting the code you have to make use of loops to interact with all elements of the array. Try doing this with a while loop and a for loop.
