--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-tour/00-04-processing.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-tour/00-04-processing.mdx
@@ -9,7 +9,7 @@ import { Accordion, AccordionItem } from 'accessible-astro-components'
 Now we have the basics of how to declare arrays, store values in the array, and access these values, lets switch to see how to make use of this. In the following video we go through the thinking behind working with arrays. This will help equip you with the tools to start building different functionality when working with arrays in your code. 
 
 <div class="not-content">
-  <YouTube id="sfV1UFzdmu0" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="sfV1UFzdmu0" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
 Have a go at building a total level function, that outputs the length of all the names in the array.
