--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-tour/00-05-searching.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-tour/00-05-searching.mdx
@@ -9,7 +9,7 @@ import { Accordion, AccordionItem } from 'accessible-astro-components'
 To wrap up this part of the tour, let's finish off by looking at how we can combine other control flow statements to work on things like searching through an array. This will help you gain a better understanding of how to work with arrays.
 
 <div class="not-content">
-  <YouTube id="vAgCn8Rreh0" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="vAgCn8Rreh0" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
 Have a go at building the shortest name function, and then build your own index of function. Being able to work with array indexes can be very useful, so have a go at exploring this with your code.
