--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-tour/02-array-hand-execution.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-tour/02-array-hand-execution.mdx
@@ -4,7 +4,7 @@ title: Array Hand Execution
 import { YouTube } from 'astro-embed';
 
 <div class="not-content">
-  <YouTube id="GxU87cPuzPA" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="YQ0J_uEhNeY" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
 As with indirection, hand execution provides a great way to see how the steps in our code work with an array to achieve its goals. When hand executing an array, you use the same process we explored previously. The only difference is the new ability to have a variable that contains multiple boxes to represent an array.
