--- a/src/content/docs/book/part-2-organised-code/7-member-functions/3-explore/3-explore.mdx
+++ b/src/content/docs/book/part-2-organised-code/7-member-functions/3-explore/3-explore.mdx
@@ -7,7 +7,7 @@ import { YouTube } from 'astro-embed';
 ### Store POS - Unlimited Products
 
 <div class="not-content">
-  <YouTube id="POc-mCUfqq8" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="POc-mCUfqq8" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
 Now we have access to dynamic arrays, we should be able to update our Store POS system to have as many products as we want!
@@ -19,7 +19,7 @@ For this iteration, your program should:
 ### Dotifin - Unlimited Songs
 
 <div class="not-content">
-  <YouTube id="Gc6E_r-Q-RU" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="Gc6E_r-Q-RU" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
 Now that we have access to dynamic arrays, we should be able to updated Dotifin to have as many songs as we want!
@@ -31,7 +31,7 @@ For this iteration, your program should:
 ### RPG - Unlimited NPCs
 
 <div class="not-content">
-  <YouTube id="t9sU8cFCvms" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="t9sU8cFCvms" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
 Now that we have access to dynamic arrays, we should be able to have a lot more NPCs in our game.
