--- a/src/content/docs/book/part-0-getting-started/1-digital-realities/0-overview.mdx
+++ b/src/content/docs/book/part-0-getting-started/1-digital-realities/0-overview.mdx
@@ -6,7 +6,7 @@ sidebar:
 import { YouTube } from 'astro-embed';
 
 <div class="not-content">
-  <YouTube id="c8CzoOuOGaA" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="3FnSK5NgJo0" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
 We'll start our journey by thinking about what programs are and how computers work. This will help set the scene, providing you with a broad context and perspective on computing. Much of what is in this part will be the backdrop for our future explorations as we delve into the details of how programs work.
