--- a/src/content/docs/book/part-1-instructions/3-control-flow/0-overview.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/0-overview.mdx
@@ -4,14 +4,14 @@ title: "Overview"
 import { YouTube } from 'astro-embed';
 
 <div class="not-content">
-  <YouTube id="KkNHpscURzI" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="oyTWruiE1lg" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
 The next part of the journey will be spectacular! We are going to see how to take control of the sequence of instructions that the computer runs. This will greatly enhance what you can do with the computer, giving you the tools you need to start building much more interesting programs.
 
 ## Learning Goals
 
-By the end of this chapter you should be able to:
+By the end of this chapter you should be able to: 
 
 - Use branching and looping control flow statements.
 - Design algorithms to achieve required outcomes.
