--- a/src/content/docs/book/part-2-organised-code/10-project/3-explore/3-explore.mdx
+++ b/src/content/docs/book/part-2-organised-code/10-project/3-explore/3-explore.mdx
@@ -10,7 +10,7 @@ import { YouTube } from 'astro-embed';
 ### Creating a Film and TV Show Database
 
 <div class="not-content">
-  <YouTube id="1QJMwqHZHlE" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="1QJMwqHZHlE" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
 In this project, you will need to develop a database for managing user's watched movies, including; ratings/reviews, genres, and displaying movies by separate attributes such as their genre or by their average rating. Each movie will have a name, description, a genre, and a list of any reviews left for that movie. A review can be left by a user which will contain some text describing why they left a review as well as a score from 0 - 10.
@@ -28,7 +28,7 @@ Your program needs to:
 ### Creating a Tile-Based RPG
 
 <div class="not-content">
-  <YouTube id="OPMlHHinZPM" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="OPMlHHinZPM" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
 In this project, you will need to develop the groundwork for a Tile-Based Role Playing Game (RPG) where the screen will be separated up into different square tiles in which the player can move between these tiles. Tiles can be either traversable or non-traversable such as water and grass. Coins will spawn throughout the level and can be picked up by the player. The game will end once the player collects enough of these coins.
