--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-tour/00-01-declaring-array.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-tour/00-01-declaring-array.mdx
@@ -9,7 +9,7 @@ import { Accordion, AccordionItem } from 'accessible-astro-components'
 To get started, let's consider what an array is and see how we can declare this in our code. The following video goes explains arrays, and gets you started with the code for this.
 
 <div class="not-content">
-  <YouTube id="p1eBZ6hUJWQ" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="p1eBZ6hUJWQ" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
 Here is the starter code that you can use to work along with this. You may want to use your utilities code that you created earlier, in which case you can remove the `read_string` and `read_integer` code and instead access these from your header file.
