--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-tour/00-02-store-and-access.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-tour/00-02-store-and-access.mdx
@@ -11,7 +11,7 @@ Now we have the array, how can we use it to store values, and how can we access 
 Watch the following video and work through storing names in your array, and accessing these to print these out.
 
 <div class="not-content">
-  <YouTube id="wYYIBWY3uBg" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="wYYIBWY3uBg" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
 Have a go at implementing code to store three names in the array, and then access the values entered to output the list of names. For the moment, access each array element directly as shown in the video. This will help you see each value in the array.
