Remove typedef as much as possible

--- a/src/content/docs/book/part-2-organised-code/3-structuring-data/2-trailside/03-02-enum.md
+++ b/src/content/docs/book/part-2-organised-code/3-structuring-data/2-trailside/03-02-enum.md
@@ -53,8 +53,9 @@ In C/C++, you declare the enumeration using the **enum** keyword, and list the a
 - This is the syntax that allows you to declare an enumeration in C.
 - The declaration starts `enum` and the identifier for its name.
 - Following this is a list of constants between braces (i.e. `{...}`). Each constant must have a unique name, and the by convention is all UPPERCASE.
-- As with structs, you need to use the `enum` keyword for the type name. For example, `enum keycode_enum variable_name;`
-- You can wrap the enum in a `typedef` so that you can alias the enum to a more convenient name.
+- As with structs, you need to use the `enum` keyword for the type name in C. For example, `enum keycode_enum variable_name;`.
+- In C, you can wrap the enum in a `typedef` so that you can alias the enum to a more convenient name.
+- With C++, you can just refer to the enum using its name, so the `typedef` is unnecessary.
 
 :::
 
@@ -66,19 +67,12 @@ In C/C++, you declare the enumeration using the **enum** keyword, and list the a
 /**
  * Represents the different warning levels within the program.
  */
-enum warning_level_enum
+enum warning_level
 {
   SAFE,
   DANGER,
   EXTREME_DANGER
 };
-
-/**
- * Represents the different warning levels within the program.
- *
- * This is an alias of enum warning_level_enum
- */
-typedef enum warning_level_enum warning_level;
 
 int main()
 {
@@ -142,6 +136,6 @@ warning_level read_warning_level(string prompt)
 
 :::note
 
-Some languages, including the latest version of C++, let you have enums with different underlying types.
+Some languages, including the latest version of C++, let you have enumerations with different underlying types.
 
 :::
