--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-tour/01-02-populating-printing.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-tour/01-02-populating-printing.mdx
@@ -75,11 +75,11 @@ const int MAX_NUMBERS = 20;
  * @field values the array of values
  * @field size the number of values in the array - up to MAX_NUMBERS
  */
-typedef struct
+struct number_data
 {
   double values[MAX_NUMBERS];
   int size;
-} number_data;
+};
 
 //todo: add populate_array here
 //todo: add print here
@@ -173,11 +173,11 @@ const int MAX_NUMBERS = 20;
  * @field values the array of values
  * @field size the number of values in the array - up to MAX_NUMBERS
  */
-typedef struct
+struct number_data
 {
   double values[MAX_NUMBERS];
   int size;
-} number_data;
+};
 
 /**
  * Populate the array with values entered by the user
@@ -260,11 +260,11 @@ const int MAX_NUMBERS = 20;
  * @field values the array of values
  * @field size the number of values in the array - up to MAX_NUMBERS
  */
-typedef struct
+struct number_data
 {
   double values[MAX_NUMBERS];
   int size;
-} number_data;
+};
 
 /**
  * Populate the array with values entered by the user
