--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-tour/01-05-calculating-maximum.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-tour/01-05-calculating-maximum.mdx
@@ -78,11 +78,11 @@ const int MAX_NUMBERS = 20;
  * @field values the array of values
  * @field size the number of values in the array - up to MAX_NUMBERS
  */
-typedef struct
+struct number_data
 {
   double values[MAX_NUMBERS];
   int size;
-} number_data;
+};
 
 //... other code here ...
 
