--- a/src/content/docs/book/part-2-organised-code/7-member-functions/3-explore/3-explore.mdx
+++ b/src/content/docs/book/part-2-organised-code/7-member-functions/3-explore/3-explore.mdx
@@ -2,40 +2,7 @@
 title: Activities
 ---
 
-import { YouTube } from 'astro-embed';
+Here are some options of programs you can build:
 
-### Store POS - Unlimited Products
-
-<div class="not-content">
-  <YouTube id="POc-mCUfqq8" params="fs=1&modestbranding=1&rel=0"/>
-</div>
-
-Now we have access to dynamic arrays, we should be able to update our Store POS system to have as many products as we want!
-
-For this iteration, your program should:
-
-- Allow the user to have as many products as they like.
-
-### Dotifin - Unlimited Songs
-
-<div class="not-content">
-  <YouTube id="Gc6E_r-Q-RU" params="fs=1&modestbranding=1&rel=0"/>
-</div>
-
-Now that we have access to dynamic arrays, we should be able to updated Dotifin to have as many songs as we want!
-
-For this iteration, your program should:
-
-- Allow the user to have as many songs as they like.
-
-### RPG - Unlimited NPCs
-
-<div class="not-content">
-  <YouTube id="t9sU8cFCvms" params="fs=1&modestbranding=1&rel=0"/>
-</div>
-
-Now that we have access to dynamic arrays, we should be able to have a lot more NPCs in our game.
-
-For this iteration, your program should:
-
-- Allow the player to have as many NPCs as they like.
+- [User account](/book/part-2-organised-code/7-member-functions/3-explore/3a-user): create a user class with login and password features.
+- [Dice](/book/part-2-organised-code/7-member-functions/3-explore/3b-dice): create a class to represent dice.
